Integrated skills with model generator

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,8 @@
 <h1>Alexa Kuster</h1>
 <p>Full Stack Software Engineer</p>
 
+<h1>Posts</h1>
 <%= @posts.inspect %>
+
+<h1>Skills</h1>
+<%= @skills.inspect %>
