--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 <%= link_to "Create new Item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_items| %>
-<p><%= portfolio_items.title %></p>
+<p><%= link_to portfolio_items.title, portfolio_path(portfolio_items.id) %></p>
 <p><%= portfolio_items.subtitle %></p>
 <p><%= portfolio_items.body %></p>
 <%= image_tag portfolio_items.thumb_image if !portfolio_items.thumb_image.nil? %>
