--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 <%= link_to "Create new Item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_item| %>
-<p><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></p>
+<p><%= link_to portfolio_item.title, portfolio_show_url(portfolio_item) %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
