--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -8,3 +8,9 @@
 
 <p><%= @portfolio_item.body %></p>
 
+<h2>Technologies Used:</h2>
+
+<% @portfolio_item.technologies.each do |t| %>
+    <p><%= t.name %></p>
+<% end %>
+
