Completed authentication with virtual attributtes for user model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Alexa Kuster</h1>
+<h1>Hello!, <%= current_user.first_name if current_user %>% </h1>
 <p>Full Stack Software Engineer</p>
 
 <h1>Posts</h1>
