--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= link_to "Logout", destroy_user_session_path %>
+    <% if current_user %>
+      <%= link_to "logout", destroy_user_session_path %>
+    <% else %>
+      <%= link_to "register", new_user_registration_path %>
+      <%= link_to "login", new_user_session_path %>
+    <% end %>  
 
     <%= yield %>
   </body>
