--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <div>
-    <div><%= link_to "Home", root_path %></div>
-    <div><%= link_to "About", about_me_path %><div>
-    <div><%= link_to "Contact", contact_path %></div>
-    <div><%= link_to "Blogs", blogs_path %></div>
-    <div><%= link_to "Portfolios", portfolios_path %></div>
-    </div>
+  <%= render "shared/nav" %>
 
     <% if current_user %>
       <%= link_to "logout", destroy_user_session_path %>
