--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+
+    <%= render "shared/nav" %>
+    
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
@@ -24,14 +27,6 @@
     <% end %>  
 
     <%= yield %>
-
-    <div>
-    <div><%= link_to "Home", root_path %></div>
-    <div><%= link_to "About", about_me_path %><div>
-    <div><%= link_to "Contact", contact_path %></div>
-    <div><%= link_to "Blogs", blogs_path %></div>
-    <div><%= link_to "Portfolios", portfolios_path %></div>
-    </div>
 
   </body>
 </html>
