--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-  <%= render "shared/nav" %>
+  <%= render "shared/nav", location: 'top' %>
 
     <% if current_user %>
       <%= link_to "logout", destroy_user_session_path %>
