--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -14,8 +14,8 @@
 
   <body>
 
-  <%= render "shared/nav" %>
-  
+  <%= render "shared/nav", location: 'top' %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
