--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,12 +19,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if current_user %>
-      <%= link_to "logout", destroy_user_session_path %>
-    <% else %>
-      <%= link_to "register", new_user_registration_path %>
-      <%= link_to "login", new_user_session_path %>
-    <% end %>  
+    <%= login_helper %>  
 
     <%= yield %>
 
