--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,13 +1,13 @@
 
 <h1>portfolio items</h1>
 
-<%= link_to "Create new Item", new_portfolio_path %>
+<%= link_to "Create new Item", new_portfolio_path if logged_in?(:site_admin) %>
 
 <% @portfolio_items.each do |portfolio_item| %>
 <p><%= link_to portfolio_item.title, portfolio_show_url(portfolio_item) %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-<%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin)%>
+<%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 <% end %>
