Updated main layout styles along with helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,11 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
-          <%= render "shared/application_nav" %>
-          <%= login_helper %> 
+          <%= render "shared/application_nav" %> 
           <%= yield %>
+
+          <%= render "shared/application_footer" %>
+
         </div>  
       </div>
     </div>  
