--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -3,10 +3,11 @@
         <h3 class="masthead-brand">Lex's Portfolio</h3>
         <nav class="nav nav-masthead">
             <div><%= link_to "Home", root_path, class: 'nav-link' %></div>
-            <div><%= link_to "About", about_me_path, class: 'nav-link' %><div>
+            <div><%= link_to "About", about_me_path, class: 'nav-link' %></div>
             <div><%= link_to "Contact", contact_path, class: 'nav-link' %></div>
             <div><%= link_to "Blogs", blogs_path, class: 'nav-link' %></div>
-            <div><%= link_to "Portfolios", portfolios_path, class: 'nav-link' %></div>
+            <div><%= link_to "Portfolios", portfolios_path, class: 'nav-link' %></div>    
+            <%= login_helper "nav-link" %>
         </nav>
     </div>
 </div>
