Updated styles for user edit page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,3 +173,16 @@ body {
         width: 55rem;
     }
 }
+
+
+/*
+ * Custom styles
+ */
+
+.card-body{
+    text-align: left;
+}
+
+.auth-links a {
+    color: black;
+}
