--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
+    <h1 class="cover-heading">Welcome</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead">
+    <%# <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-    </p>
+    </p> %>
 </div>
 
 
