--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,13 +1,19 @@
-
-<h1>portfolio items</h1>
-
-<%= link_to "Create new Item", new_portfolio_path %>
-
-<% @portfolio_items.each do |portfolio_item| %>
-<p><%= link_to portfolio_item.title, portfolio_show_url(portfolio_item) %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-<%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+        <% @portfolio_items.each do |portfolio_item| %>
+        <div class="card">
+            <a href="<%= portfolio_show_url(portfolio_item) %>">
+            <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
+            </a>
+            <p class="card-text"><%= portfolio_item.title %></p>
+            <p class="card-text"><%= portfolio_item.subtitle %></p>
+            <p class="card-text"><%= portfolio_item.body %></p>
+            <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+                <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+                <%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
+            </div>
+        </div>
+        <% end %>
