--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="mastfoot">
             <div class="inner">
-              <p>©Created by Alexa Kuster</p>
+              <p>©Alexa Kuster</p>
             </div>
           </div>
