Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,18 @@
 <h1>Alexa Kuster</h1>
-<p>Full Stack Software Engineer with a background in customer service. I love exploring the outdoors and traveling any chance I get. I'm a problem solver with a keen eye for recognizing how to best utilize my skills to provide top-notch service. I'm always seeking to expand my knowledge and skills. To align my growth and evolve in my career to find the best match with a company in the dynamic tech industry.</p>
+
+<hr>
+
+<div class="row">
+
+    <div class="col-md-6">
+    <%= image_tag "sun2.jpg", width: 300, alt: "Profile Image" %>
+    </div>
+
+    <div class="col-md-6">
+    <p>Full Stack Software Engineer with a background in customer service. 
+    <br>I love exploring the outdoors and traveling any chance I get. 
+    <br>I'm a problem solver with a keen eye for recognizing how to best utilize my skills to provide top-notch service. 
+    <br>I'm always seeking to expand my knowledge and skills. To align my growth and evolve in my career to find the best match with a company in the dynamic tech industry.</p>
+    </div>
+
+</div>
