Integrated image background for app layout

--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="mastfoot">
-            <div class="inner">
-              <p>©Alexa Kuster</p>
-            </div>
-          </div>
+  <div class="inner">
+    <p class="app-footer">©Alexa Kuster</p>
+  </div>
+</div>
