--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,6 @@ a:hover {
 html,
 body {
     height: 100%;
-    background-color: #333;
 }
 
 body {
@@ -189,4 +188,24 @@ body {
 
 .register-text {
     text-align: right;
+}
+
+#background {
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;   
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: image-url('teacup1.jpg') no-repeat;
+    background-size: cover;
+}
+
+.app-footer {
+    color: black;
 }
