--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
+
+        <div id="background"></div>
+
+
+
           <%= render "shared/application_nav" %> 
           <%= yield %>
 
