--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="inner cover">
-    <h1 class="cover-heading">Welcome</h1>
+    <h1 class="cover-heading">Welcome to my profile page.</h1>
     
 </div>
 
