--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,18 +7,30 @@
 <div class="row">
 
     <div class="col-md-6">
-    <%= image_tag "sun2.jpg", width: 300, alt: "Profile Image" %>
+    <%= image_tag "Profile-pic.jpg", width: 300, alt: "Profile Image" %>
     </div>
 
     <div class="col-md-6">
-    <p class="about-me-intro">Full Stack Software Engineer with a background in customer service. 
-    <br>I love exploring the outdoors and traveling any chance I get. 
-    <br>I'm a problem solver with a keen eye for recognizing how to best utilize my skills to provide top-notch service. 
-    <br>I'm always seeking to expand my knowledge and skills. To align my growth and evolve in my career to find the best match with a company in the dynamic tech industry.</p>
+    <p class="about-me-intro-1">I'm a passionate Software Engineer with a strong foundation in both front-end and back-end technologies. </p>
+    <p class="about-me-intro-2">
+    <strong>Front-end Expertise:</strong><br> 
+    I thrive in the world of front-end development, specializing in React.js, TypeScript, HTML5, CSS3, and JavaScript. I take pride in designing responsive and engaging user interfaces that deliver exceptional user experiences.
+    <hr>
+    <strong>Back-end Proficiency:</strong><br>
+    On the back-end, I'm well-versed in technologies like Ruby on Rails, Active Record, Python, Go, and PostgreSQL. I enjoy building robust, scalable, and efficient server-side applications.
+    <hr>
+    <strong>Tools of the Trade:</strong><br>
+    I'm proficient with Git and Github for version control, and I streamline my development workflow using VS Code. My experience with Redux ensures state management is seamless, and I use Postman to rigorously test API endpoints.
+    </p>
+    
     </div>
 
 </div>
 
 
 </div>
+
+
+
+
 
