--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
-<div class="inner cover">
-    <h1 class="cover-heading">Welcome to my profile page.</h1>
-    
+<div class="inner-cover">
+    <h1 class="cover-heading">Hello, my name is <strong>Alexa Kuster</strong></h1>
+    <h2>I am a full Stack Software Engineer</h2>
+    <a href="/contact"><button type="button" class="btn btn-light">Let's Connect!</button></a>
+    <br>
+    <br>
+    <p>I'd love to explore how my skills and expertise can contribute to your next software engineering project. I'm excited to be part of innovative teams and to create technology solutions that make a difference. Feel free to reach out for collaboration, discussions, or simply to connect!</p>
 </div>
 
 
