--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -15,12 +15,12 @@
                 <p class="card-text"><%= portfolio_item.subtitle %></p>
                 <p class="card-text"><%= portfolio_item.body %></p>
                 <div class="d-flex justify-content-between align-items-center">
-                <%# <div class="btn-group">
+                <div class="btn-group">
                 <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-                <%# <%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-                <%# </div>  %>
-            <%# </div> %> 
-        <%# </div> %>
+                <%= link_to 'Delete Portfolio Item', portfolios_url(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+                </div> 
+            </div> 
+        </div>
     </div>
 </div>
 
