--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Create new portfolio item</h1>
+<div class="container portfolio-container">
+  <h1>Create a new Portfolio Item</h1>
 
-<%= render 'form_html', portfolio_item: @portfolio_item %>
+  <%= render 'form', portfolio_item: @portfolio_item %>  
+</div>
