Everything before deploy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner-cover">
     <h1 class="cover-heading">Hello, my name is <strong>Alexa Kuster</strong></h1>
-    <h2>I am a full Stack Software Engineer</h2>
+    <h2>I am a FullStack Software Engineer</h2>
     <a href="/contact"><button type="button" class="btn btn-light">Let's Connect!</button></a>
     <br>
     <br>
